# AI-Search-Algorithms-FreeCell

./: .gitignore  COMPREHENSIVE_HASHING_REPORT.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  EXAMPLE_WORKFLOW.sh  EXECUTIVE_SUMMARY.md  EXPERIMENTAL_RESULTS.md  EXPERIMENT_GUIDE.md  FRAMEWORK_SUMMARY.md  HANDOFF.md  HASHING_EVALUATION_REPORT.md  HASHING_VISUAL_ANALYSIS.md  IMPROVEMENTS.md  INDEX.md  PROJECT_COMPLETION_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTORING_README.md  REFACTORING_SUMMARY.md  REPORT_SECTION_CORRECTED.tex  REPORT_SECTION_READY.md  TASK_COMPLETION_CHECKLIST.md  VISUAL_SUMMARY.md  ZOBRIST_DELIVERABLES.md  ZOBRIST_INTEGRATION_COMPLETE.md  ZOBRIST_INTEGRATION_REPORT.md  ZOBRIST_OPTIMIZATION_GUIDE.py  ZOBRIST_QUICK_REFERENCE.md  ZOBRIST_SUMMARY.md  ZOBRIST_TECHNICAL_REPORT.md  ZOBRIST_VS_BITPACKING_README.md  analyze_benchmark.py  benchmark_zobrist_vs_bit_packing.py  experimental_analysis.py  hashing_metrics.json  incremental_update_benchmark.json  incremental_update_benchmark.py  main.py  (+14 more)
backend/: README_ENGINE.md  engine.py  models.py
docs/: COMPREHENSIVE_FLOW_VERIFICATION.md  FRONTEND_INTEGRATION.md  QUICKSTART_STATS_SAFEGUARD.md  README_SPECIAL_TEST_CASES.md  SAFEGUARD_FRONTEND_SUMMARY.md  SPECIAL_TEST_CASES.md  STATISTICS_AND_SAFEGUARD.md  TEST_SAFEGUARD_FRONTEND.md  UNIFIED_INTERFACE.md  VERIFICATION_SAFEGUARD.md
experiment_logs/: bfs_deal42.json  dfs_deal42.json  summary_deal42.json  zobrist_benchmark.json
frontend/: README.md  animation.py  board_widget.py  card_widget.py  control_panel.py  gui.py  (+3 more)
(+196 files in other folders)
