[project]
name = "ai-search-algorithms-freecell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "freecell-solver>=0.6.0",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pyside6>=6.10.2",
    "pytest>=8.0.0",
]
